Some IE fixes (#174)
* Ensure loaders and logo have height set. Avoids them looking squished

* Make sure text in inputs are centered vertically

* Make sure spinners actually spin

--- a/src/styles/components/_create_key_pair.sass
+++ b/src/styles/components/_create_key_pair.sass
@@ -62,4 +62,5 @@
 .cluster_key_pairs
   .loader
     width: 25px
+    height: 25px
     margin-bottom: 25px
