--- a/src/styles/components/_form.sass
+++ b/src/styles/components/_form.sass
@@ -18,6 +18,7 @@ form
     border-radius: 4px
     border: 1px solid lighten(#32526a, 5%)
     padding-left: 15px
+    line-height: normal
 
     &:focus
       border: 1px solid lighten(#32526a, 15%)
