--- a/src/styles/components/_image_analyze_progress.sass
+++ b/src/styles/components/_image_analyze_progress.sass
@@ -8,6 +8,7 @@
     top: 5px
     float: right
     width: 25px
+    height: 25px
 
 .image_analyze_progress--label
   display: block
