--- a/src/styles/components/_nav.sass
+++ b/src/styles/components/_nav.sass
@@ -63,6 +63,7 @@ nav
 
   .logo
     width: 22px
+    height: 22px
     vertical-align: middle
     position: relative
     top: -1px
