--- a/src/styles/components/_progress_button.sass
+++ b/src/styles/components/_progress_button.sass
@@ -1,9 +1,9 @@
-@-webkit-keyframes spin
+@keyframes spin
   0%
-    -webkit-transform: rotate(0deg)
+    transform: rotate(0deg)
 
   100%
-    -webkit-transform: rotate(360deg)
+    transform: rotate(360deg)
 
 .loader
   animation-name: spin
@@ -24,6 +24,7 @@
     position: relative
     vertical-align: middle
     width: 22px
+    height: 22px
     margin: 0px
     margin-right: 10px
     margin-left: 10px
