--- a/src/styles/components/_signup.sass
+++ b/src/styles/components/_signup.sass
@@ -36,6 +36,7 @@
 
   .loader
     width: 25px
+    height: 25px
 
 .signup--status
   text-align: center
